fixed spacing

--- a/FRONTEND/ProntoMiao/src/app/components/login-component/login-component.component.scss
+++ b/FRONTEND/ProntoMiao/src/app/components/login-component/login-component.component.scss
@@ -13,7 +13,9 @@
 }
 
 
-
+.formField {
+  margin-bottom: 0.5em
+}
 
 .formCheckbox{
   margin-bottom: 1.25em
